RESOLVED FIXED201853
CheckArray on DirectArguments/ScopedArguments does not filter out slow put array storage
https://bugs.webkit.org/show_bug.cgi?id=201853
Summary CheckArray on DirectArguments/ScopedArguments does not filter out slow put ar...
Saam Barati
Reported 2019-09-16 18:22:12 PDT
...
Attachments
patch (4.83 KB, patch)
2019-09-16 18:29 PDT, Saam Barati
ysuzuki: review+
patch for landing (4.79 KB, patch)
2019-09-16 18:50 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-09-16 18:23:12 PDT
Saam Barati
Comment 2 2019-09-16 18:29:40 PDT
Yusuke Suzuki
Comment 3 2019-09-16 18:32:14 PDT
Comment on attachment 378924 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=378924&action=review r=me with comment. > Source/JavaScriptCore/dfg/DFGArrayMode.h:447 > + return arrayModesWithIndexingShapes(ArrayStorageShape, NonArray) | arrayModesWithIndexingShapes(SlowPutArrayStorageShape, NonArray); Should we just do like, `arrayModesWithIndexingShapes(NonArray, ArrayStorageShape, SlowPutArrayStorageShape)`?
Saam Barati
Comment 4 2019-09-16 18:48:43 PDT
Comment on attachment 378924 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=378924&action=review >> Source/JavaScriptCore/dfg/DFGArrayMode.h:447 >> + return arrayModesWithIndexingShapes(ArrayStorageShape, NonArray) | arrayModesWithIndexingShapes(SlowPutArrayStorageShape, NonArray); > > Should we just do like, `arrayModesWithIndexingShapes(NonArray, ArrayStorageShape, SlowPutArrayStorageShape)`? yes, I meant to do that :)
Saam Barati
Comment 5 2019-09-16 18:50:13 PDT
Created attachment 378925 [details] patch for landing
WebKit Commit Bot
Comment 6 2019-09-17 09:32:18 PDT
Comment on attachment 378925 [details] patch for landing Clearing flags on attachment: 378925 Committed r249959: <https://trac.webkit.org/changeset/249959>
WebKit Commit Bot
Comment 7 2019-09-17 09:32:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.