CheckArray on DirectArguments/ScopedArguments does not filter out slow put array storage https://bugs.webkit.org/show_bug.cgi?id=201853 <rdar://problem/53805461>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/direct-arguments-check-array-filter-type.js: Added.
(foo):

Source/JavaScriptCore:

We were claiming CheckArray for ScopedArguments/DirectArguments was filtering
out SlowPutArrayStorage. It does no such thing. We just check that the object
is either ScopedArguments/DirectArguments.

* dfg/DFGArrayMode.h:
(JSC::DFG::ArrayMode::arrayModesThatPassFiltering const):
(JSC::DFG::ArrayMode::arrayModesWithIndexingShapes const):
(JSC::DFG::ArrayMode::arrayModesWithIndexingShape const): Deleted.


Canonical link: https://commits.webkit.org/215510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249959 268f45cc-cd09-0410-ab3c-d52691b4dbfc